Chore: Updated gradle and readme in prep for v0.1 release